--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "private": true,
+  "private": false,
   "displayName": "Homebridge Nexa Bridge X",
   "name": "homebridge-nexabridgex",
   "version": "1.0.0",
-  "description": "A short description about what your plugin does.",
+  "description": "This is a plugin for Nexa Bridge X (1.7 and forward).",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
