--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": false,
   "displayName": "Homebridge Nexa Bridge X",
   "name": "homebridge-nexabridgex",
-  "version": "1.9.1",
+  "version": "2.0.0",
   "description": "This is a plugin for Nexa Bridge X (1.7 and forward).",
   "license": "Apache-2.0",
   "repository": {
@@ -27,7 +27,8 @@
     "homebridge-plugin"
   ],
   "dependencies": {
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "fakegato-history": "^0.6.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
