--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "homebridge-plugin"
   ],
   "dependencies": {
-    "request": "^2.88.0",
-    "fakegato-history": "^0.6.1"
+    "fakegato-history": "^0.6.2",
+    "request": "^2.88.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.31",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "eslint": "^7.21.0",
-    "homebridge": "^1.3.1",
-    "nodemon": "^2.0.7",
+    "@types/node": "^14.17.33",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
+    "homebridge": "^1.3.6",
+    "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.2"
+    "typescript": "^4.4.4"
   }
 }
